# hng14-stage2-devops

./: .env.example  .gitignore  FIXES.md  README.md  docker-compose.test.yaml  docker-compose.yaml
.github/workflows/: ci.yaml
api/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
api/tests/: test_main.py
frontend/: Dockerfile  app.js
frontend/frontend/: eslint.config.js
frontend/views/: index.html
worker/: Dockerfile  pyproject.toml  worker.py
