[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]
[tool.coverage.run]
source = ["main", "config"]
